--- a/my-blog/src/main/resources/application-pro.yml
+++ b/my-blog/src/main/resources/application-pro.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/mybatisplus?characterEncoding=utf8&useUnicode=true&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
 
   thymeleaf:
@@ -13,6 +13,4 @@ spring:
     cache: false
     mode: HTML5
     suffix: .html
-  profiles:
-    active:
 
